<resources>
    <string name="app_name">Parking reservation</string>
    <string name="title_activity_login__parking">Sign in</string>
    <string name="title_activity_nearby_places">Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- For first page-->
    <string name="Register">REGISTER</string>
    <string-array name="register">
        <item>REGISTER</item>
        <item>Customer</item>
        <item>Client</item>
    </string-array>

    <!-- strings required in customer login-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="phone_no">Mobile Number</string>
    <string name="email">E-Mail ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--For vehicle registration-->
    <string-array name="vehicles">
        <item>2- Wheeler</item>
        <item>4-Wheeler</item>
    </string-array>
    <string name="fourWheeler">4-Wheeler</string>
    <string name="twoWheeler">2-Wheeler</string>
    <string-array name="number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- String required in client login-->
    <string name="OfficeTelephoneNumber">Office Telephone Number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email_id">Official Email-ID</string>
    <string name="org_name">Name of Organization</string>
    <string name="category">Category</string>
    <string-array name="category">
        <item>Malls</item>
        <item>Cinema Hall</item>
        <item>Hotels</item>
        <item>Restaurants</item>
    </string-array>


    <!--Validations    -->
    <string name="invalid">Please enter correct details</string>
    <string name="title_activity_customer_signin__first">Map</string>
    <string name="title_activity_customer_sign_in_first">Customer_signInFirst</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reserve__booking">Reserve_Booking</string>
    <string name="title_activity_login_client">Login_client</string>

</resources>
